# image-tracer

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
ImageTracer/: app.py
web/: index.html
web/css/: style.css
web/js/: drag_drop.js  draw.js  get_location.js
